# ChangeLog for dev-cpp/sptk
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/sptk/ChangeLog,v 1.17 2006/07/31 00:08:37 iluxa Exp $

*sptk-3.2.6 (31 Jul 2006)

  31 Jul 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +sptk-3.2.6.ebuild:
  sptk-3.2.6 is ready for consumption

*sptk-3.1.4 (29 May 2006)
*sptk-3.0.19 (29 May 2006)

  29 May 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +sptk-3.0.19.ebuild, +sptk-3.1.4.ebuild:
  Add sptk-3.0.19 and sptk-3.1.4

*sptk-3.0.12 (18 Jan 2006)

  18 Jan 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +sptk-3.0.12.ebuild:
  SPTK 3.0.12 is out

  14 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> sptk-3.0.6.ebuild:
  Stable on x86.

  10 Jan 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  sptk-3.0.11.ebuild:
  - Add sqlite3 use flag
  - Use use_enable

*sptk-3.0.11 (10 Jan 2006)

  10 Jan 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +sptk-3.0.11.ebuild:
  3.0.11 is here

  11 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> sptk-2.3.28.ebuild:
  Stable on x86.

*sptk-3.0.6 (04 Nov 2005)

  04 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> -sptk-2.2.ebuild,
  -sptk-2.2.1.ebuild, -sptk-2.3.16.ebuild, +sptk-3.0.6.ebuild:
  New version - 3.0.6, removed old versions.

  04 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> sptk-2.3.28.ebuild:
  Fixed dodoc not to install COPYING and/or INSTALL.

  30 Apr 2005; David Holm <dholm@gentoo.org> sptk-2.3.28.ebuild:
  Readded to ~ppc

*sptk-2.3.28 (18 Apr 2005)

  18 Apr 2005; Ilya A. Volynets-Evenbakh <ilya@total-knowledge.com>
  +sptk-2.3.28.ebuild:
  Add an ebuild for 2.3.28

*sptk-2.3.16 (28 Nov 2004)

  28 Nov 2004; Ilya A. Volynets-Evenbach <iluxa@gentoo.org>
  +sptk-2.3.16.ebuild:
  Add sptk 2.3.16 (By Alexey Parshin <alexeyp@tts-sf.com>)

  08 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> sptk-2.2.1.ebuild,
  sptk-2.2.ebuild:
  ~alpha keyword, fix license syntax.
