@@ -29,14 +29,14 @@ EBUILD sptk-3.1.4.ebuild 1396 RMD160 5f66d051ff5760897363de8e43854a8ad9954c59 SH
 MD5 5d03d2f3be71d9d8eec15a70d353653a sptk-3.1.4.ebuild 1396
 RMD160 5f66d051ff5760897363de8e43854a8ad9954c59 sptk-3.1.4.ebuild 1396
 SHA256 d1034ea584e3427ebb7909176b44172659b4d80f7bb0f4f9feefe7699c97ab0b sptk-3.1.4.ebuild 1396
-EBUILD sptk-3.2.6.ebuild 1396 RMD160 be124a41fd60376182879c4ccc700030ad13db09 SHA1 2b0d2a1aca3c658e20145c57eb686a203d07249a SHA256 4bc45d74d5d44613d7a05d139ce4211ec0cc0263ae8ec840ce5beb45e8b62878
-MD5 9ca83b3b5786df5d43b9688f5920ea8f sptk-3.2.6.ebuild 1396
-RMD160 be124a41fd60376182879c4ccc700030ad13db09 sptk-3.2.6.ebuild 1396
-SHA256 4bc45d74d5d44613d7a05d139ce4211ec0cc0263ae8ec840ce5beb45e8b62878 sptk-3.2.6.ebuild 1396
-MISC ChangeLog 2758 RMD160 f115c5ea6729fb717cf2e4fccf0fb4bc675daad0 SHA1 246cdc67368c5bcfb57108d125e215b4222ac8d2 SHA256 7fce0df84736ab93f93a5a9ab4976002843f9aade3695190148b76804ccf2f60
-MD5 616a1d4b15ba1402ba80171f8a1001b6 ChangeLog 2758
-RMD160 f115c5ea6729fb717cf2e4fccf0fb4bc675daad0 ChangeLog 2758
-SHA256 7fce0df84736ab93f93a5a9ab4976002843f9aade3695190148b76804ccf2f60 ChangeLog 2758
+EBUILD sptk-3.2.6.ebuild 1432 RMD160 5f0e641ed4c14c32bbe3e94914e2a22272e0969e SHA1 c0aa46a17ed5da99a55b2fdf114a741bad1c21cf SHA256 f02193563af8cfc7b922223785a5af1ee97fe863a099b855305fecd0ac3fa5f4
+MD5 2de08291bd9198d58386922c5882b020 sptk-3.2.6.ebuild 1432
+RMD160 5f0e641ed4c14c32bbe3e94914e2a22272e0969e sptk-3.2.6.ebuild 1432
+SHA256 f02193563af8cfc7b922223785a5af1ee97fe863a099b855305fecd0ac3fa5f4 sptk-3.2.6.ebuild 1432
+MISC ChangeLog 2957 RMD160 36d69033419281d27e2386d69e9d319493b89d86 SHA1 1a84f43434bd40b21c7add76de708205e2c64bfb SHA256 425b1c9458e8f44ee5994cce3b1213249dd00ae2763bbbd14071eaf8419179df
+MD5 bb9a587ff9f83e638260786129ee4fbf ChangeLog 2957
+RMD160 36d69033419281d27e2386d69e9d319493b89d86 ChangeLog 2957
+SHA256 425b1c9458e8f44ee5994cce3b1213249dd00ae2763bbbd14071eaf8419179df ChangeLog 2957
 MISC metadata.xml 327 RMD160 d3557f0313200e2c32b36b77f449b4512e358ea3 SHA1 343786140387406483889098c028157579237526 SHA256 30dfaf35f7cc85073dd57488deb5a60bebfae60615c153e2f9daece72c3efb61
 MD5 fc6a5133fe3e425604dc66e248cb478c metadata.xml 327
 RMD160 d3557f0313200e2c32b36b77f449b4512e358ea3 metadata.xml 327
