@@ -1,6 +1,14 @@
 # ChangeLog for dev-cpp/sptk
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/sptk/ChangeLog,v 1.17 2006/07/31 00:08:37 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/sptk/ChangeLog,v 1.18 2006/08/01 20:33:47 iluxa Exp $
+
+  01 Aug 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  sptk-3.2.6.ebuild:
+  Add excel use flag
+
+  01 Aug 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  sptk-3.2.6.ebuild:
+  Mark ~alpha
 
 *sptk-3.2.6 (31 Jul 2006)
 
